--- a/src/index.html
+++ b/src/index.html
@@ -151,12 +151,73 @@
             </li>
         </ul>
 
-        <div class="catalog__content">
+        <div class="catalog__content catalog__content_active">
             <div class="catalog-item">
-                <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
-                <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-                <div class="catalog-item__descr">Для первых шагов в тренировках</div>
-                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках</div>
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе</li>
+                        <li>Вы увидите информативный графический индикатор</li>
+                        <li>Вы увидите информацию о расходе калорий за тренеровку</li>
+                        <li>Вы сможете посмотреть данные оп 10 тренировкам</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                <hr/>
+                <div class="catalog-item__footer">
+                    <div class="catalog-item__prices">
+                        <div class="catalog-item__old-price">4 750 rub.</div>
+                        <div class="catalog-item__price">4 500 rub.</div>
+                    </div>
+                    <button class="button button_mini">КУПИТЬ</button>
+                </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках</div>
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе</li>
+                        <li>Вы увидите информативный графический индикатор</li>
+                        <li>Вы увидите информацию о расходе калорий за тренеровку</li>
+                        <li>Вы сможете посмотреть данные оп 10 тренировкам</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                <hr/>
+                <div class="catalog-item__footer">
+                    <div class="catalog-item__prices">
+                        <div class="catalog-item__old-price">4 750 rub.</div>
+                        <div class="catalog-item__price">4 500 rub.</div>
+                    </div>
+                    <button class="button button_mini">КУПИТЬ</button>
+                </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                        <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках</div>
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе</li>
+                        <li>Вы увидите информативный графический индикатор</li>
+                        <li>Вы увидите информацию о расходе калорий за тренеровку</li>
+                        <li>Вы сможете посмотреть данные оп 10 тренировкам</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
                 <hr/>
                 <div class="catalog-item__footer">
                     <div class="catalog-item__prices">
@@ -167,8 +228,85 @@
                 </div>
             </div>
         </div>
-        <div class="catalog__content"></div>
-        <div class="catalog__content"></div>
+        <div class="catalog__content">
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content">
+                        <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках</div>
+                        <a href="#" class="catalog-item__link catalog-item__list_active">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list catalog-item__list_active">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе</li>
+                        <li>Вы увидите информативный графический индикатор</li>
+                        <li>Вы увидите информацию о расходе калорий за тренеровку</li>
+                        <li>Вы сможете посмотреть данные оп 10 тренировкам</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                <hr/>
+                <div class="catalog-item__footer">
+                    <div class="catalog-item__prices">
+                        <div class="catalog-item__old-price">4 750 rub.</div>
+                        <div class="catalog-item__price">4 500 rub.</div>
+                    </div>
+                    <button class="button button_mini">КУПИТЬ</button>
+                </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content">
+                        <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках</div>
+                        <a href="#" class="catalog-item__link catalog-item__list_active">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list catalog-item__list_active">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе</li>
+                        <li>Вы увидите информативный графический индикатор</li>
+                        <li>Вы увидите информацию о расходе калорий за тренеровку</li>
+                        <li>Вы сможете посмотреть данные оп 10 тренировкам</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                <hr/>
+                <div class="catalog-item__footer">
+                    <div class="catalog-item__prices">
+                        <div class="catalog-item__old-price">4 750 rub.</div>
+                        <div class="catalog-item__price">4 500 rub.</div>
+                    </div>
+                    <button class="button button_mini">КУПИТЬ</button>
+                </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content">
+                        <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"/>
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках</div>
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list catalog-item__list_active">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе</li>
+                        <li>Вы увидите информативный графический индикатор</li>
+                        <li>Вы увидите информацию о расходе калорий за тренеровку</li>
+                        <li>Вы сможете посмотреть данные оп 10 тренировкам</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                <hr/>
+                <div class="catalog-item__footer">
+                    <div class="catalog-item__prices">
+                        <div class="catalog-item__old-price">4 750 rub.</div>
+                        <div class="catalog-item__price">4 500 rub.</div>
+                    </div>
+                    <button class="button button_mini">КУПИТЬ</button>
+                </div>
+            </div>
+        </div>
+        <div class="catalog__content">
+        </div>
     </div>
 </section>
 
