--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="header__contacts">
                 <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                <button class="button">заказать звонок</button>
+                <button class="button" data-modal="consultation">заказать звонок</button>
             </div>
         </header>
 
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+            <button class="button button_main" data-modal="consultation">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
             <div class="promo__link">
                 или
                 <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -305,14 +305,73 @@
                 </div>
             </div>
         </div>
-        <div class="catalog__content">
-        </div>
+        <div class="catalog__content"></div>
     </div>
 </section>
+
+<footer class="footer">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d20309.075323923767!2d30.4721233!3d50.4851493!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde96c5f81af%3A0x112259d9019b4231!2z0JrQuNGA0LjQu9C70L7QstGB0LrQsNGPINGG0LXRgNC60L7QstGM!5e0!3m2!1sru!2sua!4v1608220471392!5m2!1sru!2sua"
+            width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+    <div class="footer__map"></div>
+    <div class="footer__info">
+        <address class="footer__addr">Балковская 33</address>
+        <a href="tel:7320647" class="footer__phone">+38023123123</a>
+        <div class="footer__social">
+            <a href="" class="footer__social-item">
+                <img src="icons/facebook.svg" alt="facebook"></a>
+            <a href="" class="footer__social-item">
+                <img src="icons/instagram.svg" alt="instagram">
+            </a>
+            <a href="" class="footer__social-item">
+                <img src="icons/pinterest.svg" alt="pineters">
+            </a>
+        </div>
+    </div>
+</footer>
+
+<div class="overlay">
+    <div class="modal" id="consultation">
+        <div class="modal__close">&times;</div>
+        <div class="modal__subtitle">Просто заполните форму</div>
+        <div class="modal__descr">Мы вам перезвоним</div>
+        <form class="feed-form feed-form_mt25" action="">
+            <input name="name" required type="text" placeholder="Ваше имя"/>
+            <input name="phone" required type="tel" placeholder="Ваш телефон"/>
+            <input name="email" required type="email" placeholder="Ваше E-mail"/>
+
+            <button type="submit" class="button button_submit">
+                Заказать консультацию
+            </button>
+        </form>
+    </div>
+
+    <div class="modal" id="order">
+        <div class="modal__close">&times;</div>
+        <div class="modal__subtitle">Ваш заказ</div>
+        <div class="modal__descr">Пульсометр Polar P1</div>
+        <form class="feed-form feed-form_mt25" action="">
+            <input name="name" required type="text" placeholder="Ваше имя"/>
+            <input name="phone" required type="tel" placeholder="Ваш телефон"/>
+            <input name="email" required type="email" placeholder="Ваше E-mail"/>
+
+            <button type="submit" class="button button_submit">
+                Купить
+            </button>
+        </form>
+    </div>
+
+    <div class="modal modal__mini" id="thanks">
+        <div class="modal__close">&times;</div>
+        <div class="modal__subtitle">Спасибо за заявку</div>
+        <div class="modal__descr">Наш менеджер свяжется с вами.</div>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.validate.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
