--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="sass/slick.css"/>
 </head>
 <body>
-<section class="promo">
+<section id="up" class="promo">
     <div class="container">
         <header class="header">
             <a href="#" class="header__logo">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="advantages__item">
-                <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon">
+                <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon advantages__icon_animated">
                 <div class="advantages__subtitle">
                     Заботимся о здоровье
                 </div>
@@ -368,10 +368,15 @@
     </div>
 </div>
 
+<a href="#up" class="pageup">
+    <img src="icons/up.svg" alt="up">
+</a>
+
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
