--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" type="text/css" href="sass/slick.css"/>
 </head>
@@ -120,7 +121,7 @@
     </div>
 </section>
 
-<section class="carousel">
+<div class="carousel">
     <div class="container">
         <div class="carousel__inner">
             <div>
@@ -134,7 +135,7 @@
             </div>
         </div>
     </div>
-</section>
+</div>
 
 <section class="catalog">
     <div class="container">
@@ -311,7 +312,7 @@
 
 <footer class="footer">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d20309.075323923767!2d30.4721233!3d50.4851493!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde96c5f81af%3A0x112259d9019b4231!2z0JrQuNGA0LjQu9C70L7QstGB0LrQsNGPINGG0LXRgNC60L7QstGM!5e0!3m2!1sru!2sua!4v1608220471392!5m2!1sru!2sua"
-            width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
     <div class="footer__map"></div>
     <div class="footer__info">
@@ -377,6 +378,7 @@
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
 <script src="js/jquery.maskedinput.min.js"></script>
+<script src="js/wow.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
